--- a/StudioSync/wwwroot/index.html
+++ b/StudioSync/wwwroot/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
 
 <head>
     <meta charset="utf-8" />
@@ -41,13 +41,14 @@
                 <div class="modal-dialog modal-dialog-centered">
                     <div class="modal-content">
                         <div class="modal-header">
-                            <h5 class="modal-title" id="exampleModalLabel">起動しています</h5>
+                            <p class="modal-title" id="exampleModalLabel">起動しています</p>
                         </div>
                         <div class="modal-body text-center">
                             <h1>StudioSync</h1>
                             <div class="spinner-border" role="status">
                                 <span class="visually-hidden">Loading...</span>
                             </div>
+                            <p>アプリケーションの起動中</p>
                         </div>
                         <div class="modal-footer">
                             Copylight 2023 WSOFT All rights reserved.
@@ -80,8 +81,9 @@
     </div>
 
     <script src="_framework/blazor.webassembly.js"></script>
+    <script src="js/app.js"></script>
     <script>
-    navigator.serviceWorker.register('service-worker.js');
+        navigator.serviceWorker.register('service-worker.js');
     </script>
 
 </body>
