--- a/StudioSync/wwwroot/index.html
+++ b/StudioSync/wwwroot/index.html
@@ -57,6 +57,10 @@
                 </div>
             </div>
         </div>
+        <div id="welcome-splash" class="text-center">
+            <img src="img/logo.svg" style="height :90vh; opacity: 0.2;"/>
+        </div>
+        <p>Copylight (c) 2023 WSOFT All rights reserved.</p>
     </div>
     <div class="modal fade" id="infoModal" tabindex="-1" aria-labelledby="infoModalLabel" aria-hidden="true">
         <div class="modal-dialog">
